UPDATE WIDTH IMAGE

--- a/index.html
+++ b/index.html
@@ -325,22 +325,22 @@
 
 
         <div class="col-lg-3 col-6 mb-3">
-          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image">
+          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image" class="w-75 ">
           <h6>Banyak Promo Menarik</h6>
           <p> Amankan dompetmu maksimalkan liburanmu dengan beragam promo yang membantumu berhemat ekstra!</p>
         </div>
         <div class="col-lg-3 col-6 mb-3">
-          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image">
+          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image" class="w-75 ">
           <h6>Banyak Promo Menarik</h6>
           <p> Amankan dompetmu maksimalkan liburanmu dengan beragam promo yang membantumu berhemat ekstra!</p>
         </div>
         <div class="col-lg-3 col-6 mb-3">
-          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image">
+          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image" class="w-75 ">
           <h6>Banyak Promo Menarik</h6>
           <p> Amankan dompetmu maksimalkan liburanmu dengan beragam promo yang membantumu berhemat ekstra!</p>
         </div>
         <div class="col-lg-3 col-6 mb-3">
-          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image">
+          <img src="https://www.misteraladin.com/img/about/no-extra-charge.png" alt="image" class="w-75 ">
           <h6>Banyak Promo Menarik</h6>
           <p> Amankan dompetmu maksimalkan liburanmu dengan beragam promo yang membantumu berhemat ekstra!</p>
         </div>
