--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       </div>
     </div>
   </section>
-  <section class="section-our-partner bg-white pt-5 pb-5 ">
+  <!-- <section class="section-our-partner bg-white pt-5 pb-5 ">
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-6">
@@ -289,7 +289,7 @@
 
     </div>
 
-  </section>
+  </section> -->
 
   <section class="newsletter">
     <div class="section-footer-subscribe">
