--- a/detail-produk.html
+++ b/detail-produk.html
@@ -313,7 +313,8 @@
     <label for="">Pilih Tanggal Booking</label>
     <input type="date" id="date" class="form-control w-100">
 </div>
-                    </div>
+</div>
+<a href="chekout.html" class="btn btn-primary mt-3 w-100">Proses Checkout</a>
                 </div>
             </div>
 
