--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6 col-6 mb-3">
-          <div class="card" >
+        <a href="detail-produk.html">
+            <div class="card" >
             <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" class="card-img-top" alt="img-hasil-filter">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -181,9 +182,11 @@
               </div>
             </div>
           </div>
+        </a>
         </div>
         <div class="col-lg-3 col-md-6 col-6 mb-3">
-          <div class="card" >
+        <a href="detail-produk.html">
+            <div class="card" >
             <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" class="card-img-top" alt="img-hasil-filter">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -197,9 +200,11 @@
               </div>
             </div>
           </div>
+        </a>
         </div>
         <div class="col-lg-3 col-md-6 col-6 mb-3">
-          <div class="card" >
+        <a href="detail-produk.html">
+            <div class="card" >
             <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" class="card-img-top" alt="img-hasil-filter">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -213,9 +218,11 @@
               </div>
             </div>
           </div>
+        </a>
         </div>
         <div class="col-lg-3 col-md-6 col-6 mb-3">
-          <div class="card" >
+        <a href="detail-produk.html">
+            <div class="card" >
             <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" class="card-img-top" alt="img-hasil-filter">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -229,6 +236,7 @@
               </div>
             </div>
           </div>
+        </a>
         </div>
       </div>
     </div>
