--- a/indexV2.html
+++ b/indexV2.html
@@ -32,7 +32,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexV2.html">Home V2</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
@@ -198,6 +201,87 @@
         </div>
     </div>
 </section>
+
+
+<!-- <section class="section-hasil-search pt-5 pb-5 bg-white">
+  <div class="container">
+    <h2>Pool service plans & packages    </h2>
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-6 mb-3">
+        <a href="detail-produk.html">
+          <div class="card">
+            <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80" class="card-img-top" alt="img-hasil-filter">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-success">Mini Renang</p>
+              <div class="price-mulai-dari">
+                <small>Mulai dari</small>
+                <div class="product-price_currency">
+                  <span class="currency">IDR</span>
+                  280.000
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-6 col-6 mb-3">
+        <a href="detail-produk.html">
+          <div class="card">
+            <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80" class="card-img-top" alt="img-hasil-filter">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-success">Mini Renang</p>
+              <div class="price-mulai-dari">
+                <small>Mulai dari</small>
+                <div class="product-price_currency">
+                  <span class="currency">IDR</span>
+                  280.000
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-6 col-6 mb-3">
+        <a href="detail-produk.html">
+          <div class="card">
+            <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80" class="card-img-top" alt="img-hasil-filter">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-success">Mini Renang</p>
+              <div class="price-mulai-dari">
+                <small>Mulai dari</small>
+                <div class="product-price_currency">
+                  <span class="currency">IDR</span>
+                  280.000
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-6 col-6 mb-3">
+        <a href="detail-produk.html">
+          <div class="card">
+            <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80" class="card-img-top" alt="img-hasil-filter">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text text-success">Mini Renang</p>
+              <div class="price-mulai-dari">
+                <small>Mulai dari</small>
+                <div class="product-price_currency">
+                  <span class="currency">IDR</span>
+                  280.000
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section> -->
 
 <section class="section-testimonial pt-5 pb-5 ">
 
@@ -373,7 +457,7 @@
     <div class="section-footer-copyright">
       <div class="container">
         <div class="row justify-content-center pt-4 pb-5 text-center">
-         <div class="col-12"> © 2023 misteraladin.com. All rights reserved. PT MNC ALADIN INDONESIA</div>
+         <div class="col-12"> © 2023 byur.com. All rights reserved. </div>
         </div>
       </div>
     </div>
