--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top ">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="https://templates.envytheme.com/saspol/default/assets/img/logo.png" alt="Logo">
+          <img src="assets/images/logo.png" alt="Logo" width="100">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
